[package]
name = "chain_tools"
version = "0.1.1"
edition = "2021"
description = "A set of traits allowing for more a erganomic style of chain programming"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/chain_tools"
repository = "https://github.com/bdferul/chain_tools/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
